--- a/css/styles.css
+++ b/css/styles.css
@@ -49,9 +49,9 @@ body {
   padding-right: 15px;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.border {
+  border-bottom: 1px solid #eeeeee;
+  box-sizing: border-box;
 }
 
 /*===Header==*/
@@ -183,7 +183,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
-  margin-top: -94px;
 }
 
 .features-list-item {
@@ -314,12 +313,14 @@ body {
 .images-list {
   display: flex;
   flex-wrap: wrap;
+  padding-top: -50px;
+  margin-left: -30px;
 }
 
 .images-list-item {
   flex-basis: calc((100%-90px) / 3 - 30px);
+  padding-top: 50px;
   margin-left: 30px;
-  margin-top: 34px;
 }
 
 .portfolio-list-btn {
